@startuml

title __SRC's Class Diagram__\n


    class Game {
        ~ main_game : JFrame
        - menu : JButton
        + Game()
        + setVisible()
        ~ buildGUI()
    }

  


    class Grid {
        ~ byUser : boolean[][]
        ~ dimX : int
        ~ dimY : int
        ~ letter_shape : boolean[][]
        + Grid()
        + getSquarebyUser()
        + getSquareforLetter()
        + setSquare()
    }

  


    class GridPanel {
        - sideLen : int
        - sizeX : int
        - sizeY : int
        + GridPanel()
        + paintComponent()
    }

  


    class GridPanel.GridClickListener {
        - gridX : int
        - gridY : int
        + mouseDragged()
        + mousePressed()
        - setGridXY()
        - switchSquare()
    }

  


    class Menu {
        + Menu()
        {static} + main()
    }

  

  Game o-- GridPanel : gp
  GridPanel -up-|> javax.swing.JPanel
  GridPanel o-- Grid : grd
  GridPanel +-down- GridPanel.GridClickListener
  GridPanel.GridClickListener -up-|> java.awt.event.MouseAdapter
  Menu -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
